fix for options search dialog not showing

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -1742,3 +1742,6 @@ button.btn.action {
 .ui-dialog-titlebar .ui-dialog-titlebar-close {
 	float: right;
 }
+button.bs-placeholder {
+	display: none;
+}
